--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -2,7 +2,7 @@
   z-index: 999;
   position: sticky;
   top: 0;
-  height: 60px;
+  height: 64px;
   background-color: var(--color-white);
   border-bottom: 1px solid var(--color-silver);
 }
