--- a/src/components/NotFound/NotFound.module.css
+++ b/src/components/NotFound/NotFound.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding-top: 60px;
+  padding-top: 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
